--- a/nxfit_sync_sdk/android/build.gradle
+++ b/nxfit_sync_sdk/android/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = "2.1.0"
+    ext.kotlin_version = "2.2.20"
     repositories {
         google()
         mavenCentral()
@@ -12,7 +12,7 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.plugin.serialization' version '2.2.10'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '2.2.20'
 }
 
 group = "com.nxfit.nxfit.sync_sdk"
@@ -22,8 +22,10 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
     }
 }
+
 
 apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
@@ -31,15 +33,15 @@ apply plugin: "kotlin-android"
 android {
     namespace = "com.neoex.nxfit.sync_sdk"
 
-    compileSdk = 35
+    compileSdk = 36
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11
+        jvmTarget = JavaVersion.VERSION_17
     }
 
     sourceSets {
@@ -52,6 +54,9 @@ android {
     }
 
     dependencies {
+        implementation("com.neoex:nxfit-sdk:9.0.5")
+        implementation("com.neoex:nxfit-sdk-healthconnect:9.0.5")
+
         implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.0")
 
         testImplementation("org.jetbrains.kotlin:kotlin-test")
@@ -63,9 +68,9 @@ android {
             useJUnitPlatform()
 
             testLogging {
-                events "passed", "skipped", "failed", "standardOut", "standardError"
-                outputs.upToDateWhen {false}
-                showStandardStreams = true
+               events "passed", "skipped", "failed", "standardOut", "standardError"
+               outputs.upToDateWhen {false}
+               showStandardStreams = true
             }
         }
     }
